<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/question1"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="#000"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="16dp"
            android:text="@string/question2"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/energy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/energy"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/momentum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/momentum"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/force"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/force"
                android:textStyle="italic" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/question3"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <CheckBox
            android:id="@+id/radiation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:onClick="onCheckboxClicked"
            android:paddingTop="16dp"
            android:text="@string/radiation"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/reduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/reduction"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/convection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:onClick="onCheckboxClicked"
            android:paddingBottom="16dp"
            android:text="@string/convection"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="16dp"
            android:text="@string/question4"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/barometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/barometer"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/sonometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sonometer"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/galvanometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/galvanometer"
                android:textStyle="italic" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingTop="16dp"
            android:text="@string/question5"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/gram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/gram"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/kilogram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/kilogram"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/pound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pound"
                android:textStyle="italic" />
        </RadioGroup>

        <Button

            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="onSubmit"
            android:text="@string/submit"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>


